[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["Nikita Safonov <148264012+nxplosive@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc4"
pytest = "^7.4.4"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
